--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Feliz 21 de Setiembre 🌻</h1>
+        <h1>Feliz 21 de Setiembre Mi Vida 🌻</h1>
         <div class="flower">
             <div class="petal petal1"></div>
             <div class="petal petal2"></div>
@@ -20,7 +20,7 @@
             <div class="petal petal8"></div>
             <div class="center"></div>
         </div>
-        <p>Para... ❤️</p>
+        <p>Para ti mi Amor ❤️</p>
     </div>
 </body>
 </html>
