--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="petal petal8"></div>
             <div class="center"></div>
         </div>
-        <p>Para ti mi Amor ❤️</p>
+        <p>Para ti mi Amor Hermosa ❤️</p>
     </div>
 </body>
 </html>
